# vslc

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: code_generation.md  lexer_design.md  lexical_analysis.md  syntax_analysis.md  user_defined_operators.md
lexer/logic/: scanner.cpp  scanner.h
lexer/structure/: token.cpp  token.h
lexical/logic/: scanner.cpp  scanner.h
lexical/structure/: token.cpp  token.h
syntax/logic/: parser.cpp  parser.h
syntax/structure/: ast.cpp  ast.h  input_buffer.cpp  input_buffer.h  parsing_stack.cpp  parsing_stack.h  parsing_table.cpp  parsing_table.h  production.cpp  production.h  symbol.cpp  symbol.h
test/: simpleTest.vsl  test.vsl
tools/vslc-ff/: grammar.js  package.json  result.txt  select.txt
tools/vslc-pt/: expression_generation.py  expressions.txt  requirements.pip  select.txt  vslc-pt.py
tools/vslc-tc/: constants.py  expressions.txt  vslc-tc.py
utils/: cmdline.h  engine.cpp  engine.h  printAST.h  shortcuts.cpp  shortcuts.h  source_code_reader.cpp  source_code_reader.h
